tests/error/equalsString-wrong-both-arguments.uplc
(program 0.0.0 [ [ (builtin equalsString) (con unit ()) ] (con integer 0) ])